--- a/_assets/scss_liquid/pict_slider.css.scss.liquid
+++ b/_assets/scss_liquid/pict_slider.css.scss.liquid
@@ -76,6 +76,8 @@
   // liquid > scss pipeline : slider standard, translate and opacity, no js
 {% endcomment %}
 
+{% comment %}// picture, translate slider{% endcomment %}
+
 {% include scss-liquid/optim/extra.html name_extra=type_translate
   optim_class_css=site.data.scss_liquid.optim.css_slider
   config_optim_css=site.data.scss_liquid.optim.config
