--- a/_assets/stylesheets/critical.css.scss.liquid
+++ b/_assets/stylesheets/critical.css.scss.liquid
@@ -18,6 +18,9 @@
 @import "base/base";
 
 @import 'lib/slidebars';
+{% comment %}@import 'lib/swiper';{% endcomment %}
+{% comment %}@import 'lib/swiper-acceuil-selection';{% endcomment %}
+
 
 @import 'components/container';
 // @import 'components/demo';
