mise au point maquette, reprise modele, logo header

--- a/_assets/scss_liquid/UI/slider/standard-submixins/slider_active.scss
+++ b/_assets/scss_liquid/UI/slider/standard-submixins/slider_active.scss
@@ -67,7 +67,8 @@
   .#{$containerSlider_gl}-#{$container}-#{$type} {
 
     .#{$active_gl} {
-      margin: 5% 0 0;
+      // margin: 5% 0 0;
+      margin: 0;
       text-align: center;
     }
 
