--- a/_assets/scss_liquid/UI/slider/standard-submixins/slider_design.scss
+++ b/_assets/scss_liquid/UI/slider/standard-submixins/slider_design.scss
@@ -37,7 +37,8 @@
       }
 
       .#{$slides_gl} {
-        margin: $spacing-v 0 0;
+        // margin: $spacing-v 0 0;
+        margin: 0;
         
         padding: 1%;
 
