--- a/_assets/stylesheets/components/home-page.scss
+++ b/_assets/stylesheets/components/home-page.scss
@@ -18,8 +18,11 @@
 
   .part-welcome-img {
     // width: 100%;
-    padding: $spacing-v/2 0;
-    margin-left: 0.5em;
+    padding: $spacing-v/2 0 0;
+    @include breakpoint($break-md-max){
+      padding:0;        
+    }
+    // margin-left: 0.5em;
     // background: $accent-color; //hsla(31, 15%, 50%, 0.1);
     // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
     // border-radius: $border-radius-site;
@@ -31,54 +34,162 @@
    * custom li part
    */
   .li-img-primdark {
-    background: $primary-color;//$primary-color-dark; //hsla(31, 15%, 50%, 0.1);
-    border: 0.2em solid $primary-color;
-    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
-    border-radius: 0 0 $border-radius-site $border-radius-site;
-    color: $primary-text-color; //$secondary-color-light;
+    
+    .description {
+      background: $primary-color;//$primary-color-dark; //hsla(31, 15%, 50%, 0.1);
+      border: 0.2em solid $primary-color;
+      // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
+      border-radius: 0 0 $border-radius-site $border-radius-site;
+      color: $primary-text-color; //$secondary-color-light;
+    }
   }
 
-  .li-nav-ab {
+  .li-nav-info-utils {
     // background: $accent-color; //hsla(31, 15%, 50%, 0.1);
     // border: 0.2em solid $primary-color-dark;
     // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
     border-radius: $border-radius-site;
-    color: $primary-color-light;
+    
   }
-  .li-nav {
-    background: $primary-color-light; //hsla(31, 15%, 50%, 0.1);
-    border: 0.3em solid $primary-color-dark;
-    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
-    border-radius: $border-radius-site;
-    // color: $primary-color-text;
+  
 
-    //maj margin right à 0, on sm
-    @include breakpoint($break-sm-max) {
-      margin-right: 0em;
-    }
-  }
-
-  .li-ab {
+  .li-horaire {
     background: $accent-color-ab; //hsla(31, 15%, 50%, 0.1);
     border: 0.2em solid $primary-color-text;
     box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
     border-radius: $border-radius-site;
     color: $primary-color-text;
-  }
 
-  .horaire-acceuil{
+    ul {
+      list-style: none;
+      padding: 0 $spacing-h;
 
-
-    list-style: none;
-    padding: 0.2em;
-
-    li {
-      font-size: 1.3em;
-      line-height: 1.7em;
-      // display: inline;
-      font-weight: bold;
+      li {
+        font-size: 1.1em;
+        line-height: 1.7em;
+        // display: inline;
+        font-weight: bold;
+      }
+      li:first-of-type  {
+        font-size: 1.3em;
+      }
     }
   }
+
+  .li-contact {
+    background: none; //hsla(31, 15%, 50%, 0.1);
+    // color: $primary-color-dark;
+    // border: 0.3em solid $primary-color-dark;
+    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
+    // border-radius: $border-radius-site;
+    // color: $primary-color-text;
+
+    //maj margin right à 0, on sm
+    // @include breakpoint($break-sm-max) {
+    //   margin-right: 0em;
+    // }
+
+    ul {
+      // background-color: $primary-color-light;
+      list-style: none;
+      padding: 0 ;//$spacing-h;
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: flex-start;
+
+      @include breakpoint($break-sm-max){
+        flex-flow: row wrap;
+        // 
+        
+      }
+
+      li {
+        position: relative;
+        display: inline-block;
+        margin-right: $spacing-h/2;
+        margin-bottom: $spacing-v/2;
+        padding: 0.2em;
+
+        color: $secondary-text-color;
+        // border:px solid #f8fb1e;
+        background-color: $primary-color-light; 
+        background-image: linear-gradient(to bottom, $primary-color-light, darken($primary-color-light, 20%));// #f9fc50);
+
+        font-size: 1.1em;
+        line-height: 1.7em;
+        font-weight: bold;
+        
+
+      }
+      // li:first-of-type  {
+      //   font-size: 1.3em;
+      // }
+    }
+  }
+
+  .li-slider {
+    .heading {
+      color: $secondary-color;
+      width: 100%;
+      // margin-left: $spacing-h/2; //0.5em;
+      // margin-top: 0;
+      margin: 0 50px $spacing-h/2; 
+      padding-right: 5em;
+      // margin-left: 50px;
+      @include breakpoint($break-sm-max)
+      {
+        padding-right: 0;
+        margin: 0 $spacing-h/2; 
+      }
+      // padding-top: $spacing-v/2; //1em;
+      font-size: 1.7em;
+      font-weight: 600;
+      // color : $white;
+    }
+  }
+
+  // .horaire-acceuil{
+
+  //   ul {
+  //     list-style: none;
+  //     padding: 0 $spacing-h;
+
+  //     li {
+  //       font-size: 1.1em;
+  //       line-height: 1.7em;
+  //       // display: inline;
+  //       font-weight: bold;
+  //     }
+  //     li:first-of-type  {
+  //       font-size: 1.3em;
+  //     }
+  //   }
+  // }
+
+  // .contact-acceuil{
+
+  //   ul {
+  //     list-style: none;
+  //     padding: 0 $spacing-h;
+  //     display: flex;
+  //     flex-flow: column wrap;
+  //     justify-content: flex-start;
+  //     @include breakpoint($break-sm-max){
+  //       flex-flow: row wrap;
+  //       background-color: $primary-color-light;
+  //     }
+
+  //     li {
+  //       font-size: 1.1em;
+  //       line-height: 1.7em;
+  //       // display: inline;
+  //       font-weight: bold;
+  //     }
+  //     li:first-of-type  {
+  //       font-size: 1.3em;
+  //     }
+  //   }
+  // }
 
 
   .presentation {
@@ -158,7 +269,7 @@
   }
   //end details .presentation
 
-  .welcome-home-image {
+  .img-right-home-image {
     width: 100%;
     box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
   }
