--- a/_includes/coll_ext_utils/display_navigation_header.html
+++ b/_includes/coll_ext_utils/display_navigation_header.html
@@ -1,6 +1,6 @@
 
 
-<ul class="navigation-ban">                  
+<ul class="main-menu">                  
   {% for iter_array in (0..array_title_item_acceuil_size) %}
     {% assign title_tmp = array_title_item_acceuil[iter_array]  %}
     {% assign link_tmp = array_link_article_item_acceuil[iter_array] %}   
