--- a/_assets/stylesheets/non-critical.css.scss.liquid
+++ b/_assets/stylesheets/non-critical.css.scss.liquid
@@ -11,6 +11,7 @@
 
 {% comment %}// @import "components/message";{% endcomment %}
 {% comment %}// @import "basetmp/custom";{% endcomment %}
+@import "components/toogle-switch";
 @import "components/datamaps";
 @import "components/modal";
 {% comment %}// @import "components/carousel";{% endcomment %}
