--- a/_includes/scss-liquid/collection_ext/template-standard_slider_translate.html
+++ b/_includes/scss-liquid/collection_ext/template-standard_slider_translate.html
@@ -144,13 +144,15 @@
 {% comment %}custom{% endcomment %}
 {% assign bg_define = false %}
 {% assign bg_color  = 'white' %} 
+{% assign header_color_define = false %}
+{% assign header_color  = 'white' %} 
 
 {% if max_items_slider > 0 %}
 
 
 
 
-  @include slider_design_standard({{include.container_display}}, {{include.container_ref}}, {{include.type_slider_display}}, {{include.type_slider_ref}}, {{bg_define}}, {{bg_color}});
+  @include slider_design_standard({{include.container_display}}, {{include.container_ref}}, {{include.type_slider_display}}, {{include.type_slider_ref}}, {{bg_define}}, {{bg_color}}, {{header_color_define}},{{header_color}});
 
 
 
