--- a/_assets/stylesheets/components/list_flex_styling.scss
+++ b/_assets/stylesheets/components/list_flex_styling.scss
@@ -3,6 +3,7 @@
   border-radius: $border-radius-site;
   // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
   // background: $secondary-color; //$warning-color;
+  min-height: 0px;//adapt in js if needed
 
   .heading {
     width: 100%;
@@ -32,11 +33,22 @@
   }
 }
 
+.case-list-unresize {
+  .item_list::after {
+    content: '\00a0'; /* &nbsp; */
+    display: block;
+    margin-top: $spacing-v/2;
+    height: 0px;
+    visibility: hidden;
+  }
+}
+
 .list-items-no-bg {
   // width: 100%;
   border-radius: $border-radius-site;
   // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
   // background: $secondary-color; //$warning-color;
+  min-height: 0px;//adapt in js if needed
 
   .heading {
     width: 100%;
@@ -56,6 +68,7 @@
     // color: $secondary-text-color;
   }
 
+  
   @include breakpoint($break-md-max) {
     // background: none;
     // box-shadow: none;
@@ -78,9 +91,6 @@
       flex-flow: column wrap; // column wrap;
     }
   }
-
-  
-
   .heading {
     width: 100%;
     margin-left: $spacing-h/2; //0.5em;
@@ -95,32 +105,46 @@
     padding: auto; //$spacing-h;
     // padding: $spacing-v/2 $spacing-h 0 $spacing-h;
     // border-radius: $border-radius-site;
-    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
+    box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
     // background: $secondary-color-light;
     // color: $secondary-text-color;
-
-    .catSearch {
+    // border: 2px solid #bbb;
+    border:none;
+    
+    // .catSearch {
+    button {
+      height: 100%;
       width: 100%;
       background: none;    
-      border: none;  
+      border: none;
+      border-top: 5px solid $primary-color-light;
+      color: $black;
 
-      .termSearch {
-
+      h3 {
+        margin: 0.2em;
         // color: $white;
-        font-size: 1em;
+        font-size: 1.2em;
         font-weight: 600;
-
-        h3 {
-          
-        }
-        
-
       }
 
+    }
+
+    button:focus {outline:0;}
+
+    .active {
+      // border-color:$primary-color-light !important;
+      box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.9);
+      border-color: $white !important;
+      color: $white;
     }
   }
 
   @include breakpoint($break-md-max) {
+
+    button {
+      border: none;
+      border-left: 5px solid $primary-color-light;
+    }
     // background: none;
     // box-shadow: none;
 
@@ -129,15 +153,20 @@
   }
 }
 
-.case-list-unresize {
-  .item_list::after {
-    content: '\00a0'; /* &nbsp; */
-    display: block;
-    margin-top: $spacing-v/2;
-    height: 0px;
-    visibility: hidden;
+.color-cat {
+
+  background: none;
+  .heading {
+    color :$accent-color;
+  }
+  .item_list {
+    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
+    background: none;
+    // color: $secondary-color-light;
   }
 }
+
+
 
 
 .li-unresize-secondary-color01 {
@@ -207,18 +236,7 @@
   }
 }
 
-.color-cat {
 
-  background: none;
-  .heading {
-    color :$accent-color;
-  }
-  .item_list {
-    // box-shadow: 0 0 $border-shadow rgba($shadow-color, 0.5);
-    background: none;
-    // color: $secondary-color-light;
-  }
-}
 
 
 
